k8s/prod/namespace.yaml
# WhatTools Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: whattools
  labels:
    app.kubernetes.io/part-of: whattools
